fix scrollbar

--- a/src/app/components/general/sidenav/navbar/navbar.component.scss
+++ b/src/app/components/general/sidenav/navbar/navbar.component.scss
@@ -1,6 +1,6 @@
 main{
   background-color: var(--color-white);
-    padding: 2rem 1rem 2rem 1rem;
+    padding: 2rem 0rem 2rem 1rem;
     height: calc(100dvh - 80px - 4rem);
     position: relative;
     display: flex;
